# bevy_invaders

./: .gitignore  README.md
bevy_invaders/: Cargo.toml  win.sh
bevy_invaders/src/: asset_loader.rs  astreoids.rs  collision_detection.rs  debug.rs  despawn.rs  main.rs  movement.rs  schedule.rs  spaceship.rs
