[package]
name = "bevy_invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy ={ version = "0.12.1", features = ["wayland"] }
rand = "0.8.4"
blake3 = { version = "1.5", features=["pure"] }
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3